cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__query_nameless_vars_multiple_fields_canonical.graphql.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
DOCUMENT@0..219
  OPERATION_DEF@0..218
    OPERATION_TYPE@0..5
      QUERY_KEYWORD@0..5 "query"
    VARIABLE_DEFS@5..45
      OPEN_PAREN@5..6 "("
      VARIABLE_DEF@6..25
        VARIABLE@6..14
          DOLLAR@6..7 "$"
          NAME@7..14 "houseId"
        COLON@14..15 ":"
        WHITESPACE@15..16 " "
        TYPE@16..23
          NAMED_TYPE@16..22
            NAME@16..22 "String"
          BANG@22..23 "!"
        COMMA@23..24 ","
        WHITESPACE@24..25 " "
      VARIABLE_DEF@25..44
        VARIABLE@25..38
          DOLLAR@25..26 "$"
          NAME@26..38 "streetNumber"
        COLON@38..39 ":"
        WHITESPACE@39..40 " "
        TYPE@40..44
          NAMED_TYPE@40..43
            NAME@40..43 "Int"
          BANG@43..44 "!"
      CLOSE_PAREN@44..45 ")"
    WHITESPACE@45..46 " "
    SELECTION_SET@46..218
      OPEN_CURLY@46..47 "{"
      LINE_TERMINATOR@47..48 "\n"
      WHITESPACE@48..50 "  "
      FIELD_SELECTION@50..107
        NAME@50..55 "house"
        ARGUMENTS@55..70
          OPEN_PAREN@55..56 "("
          ARGUMENT@56..68
            NAME@56..58 "id"
            COLON@58..59 ":"
            VALUE@59..68
              WHITESPACE@59..60 " "
              VARIABLE@60..68
                DOLLAR@60..61 "$"
                NAME@61..68 "houseId"
          CLOSE_PAREN@68..69 ")"
          WHITESPACE@69..70 " "
        SELECTION_SET@70..107
          OPEN_CURLY@70..71 "{"
          LINE_TERMINATOR@71..72 "\n"
          WHITESPACE@72..76 "    "
          FIELD_SELECTION@76..83
            NAME@76..78 "id"
            LINE_TERMINATOR@78..79 "\n"
            WHITESPACE@79..83 "    "
          FIELD_SELECTION@83..92
            NAME@83..87 "name"
            LINE_TERMINATOR@87..88 "\n"
            WHITESPACE@88..92 "    "
          FIELD_SELECTION@92..100
            NAME@92..95 "lat"
            LINE_TERMINATOR@95..96 "\n"
            WHITESPACE@96..100 "    "
          FIELD_SELECTION@100..106
            NAME@100..103 "lng"
            LINE_TERMINATOR@103..104 "\n"
            WHITESPACE@104..106 "  "
          CLOSE_CURLY@106..107 "}"
      LINE_TERMINATOR@107..108 "\n"
      WHITESPACE@108..110 "  "
      FIELD_SELECTION@110..152
        NAME@110..116 "street"
        ARGUMENTS@116..140
          OPEN_PAREN@116..117 "("
          ARGUMENT@117..138
            NAME@117..123 "number"
            COLON@123..124 ":"
            VALUE@124..138
              WHITESPACE@124..125 " "
              VARIABLE@125..138
                DOLLAR@125..126 "$"
                NAME@126..138 "streetNumber"
          CLOSE_PAREN@138..139 ")"
          WHITESPACE@139..140 " "
        SELECTION_SET@140..152
          OPEN_CURLY@140..141 "{"
          LINE_TERMINATOR@141..142 "\n"
          WHITESPACE@142..146 "    "
          FIELD_SELECTION@146..151
            NAME@146..148 "id"
            LINE_TERMINATOR@148..149 "\n"
            WHITESPACE@149..151 "  "
          CLOSE_CURLY@151..152 "}"
      LINE_TERMINATOR@152..153 "\n"
      WHITESPACE@153..155 "  "
      FIELD_SELECTION@155..216
        NAME@155..166 "houseStreet"
        ARGUMENTS@166..204
          OPEN_PAREN@166..167 "("
          ARGUMENT@167..181
            NAME@167..169 "id"
            COLON@169..170 ":"
            VALUE@170..181
              WHITESPACE@170..171 " "
              VARIABLE@171..179
                DOLLAR@171..172 "$"
                NAME@172..179 "houseId"
              COMMA@179..180 ","
              WHITESPACE@180..181 " "
          ARGUMENT@181..202
            NAME@181..187 "number"
            COLON@187..188 ":"
            VALUE@188..202
              WHITESPACE@188..189 " "
              VARIABLE@189..202
                DOLLAR@189..190 "$"
                NAME@190..202 "streetNumber"
          CLOSE_PAREN@202..203 ")"
          WHITESPACE@203..204 " "
        SELECTION_SET@204..216
          OPEN_CURLY@204..205 "{"
          LINE_TERMINATOR@205..206 "\n"
          WHITESPACE@206..210 "    "
          FIELD_SELECTION@210..215
            NAME@210..212 "id"
            LINE_TERMINATOR@212..213 "\n"
            WHITESPACE@213..215 "  "
          CLOSE_CURLY@215..216 "}"
      LINE_TERMINATOR@216..217 "\n"
      CLOSE_CURLY@217..218 "}"
  LINE_TERMINATOR@218..219 "\n"

