cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__query_var_default_list.graphql.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
DOCUMENT@0..49
  OPERATION_DEF@0..48
    OPERATION_TYPE@0..5
      QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    NAME@6..9 "Foo"
    VARIABLE_DEFS@9..36
      OPEN_PAREN@9..10 "("
      VARIABLE_DEF@10..35
        VARIABLE@10..15
          DOLLAR@10..11 "$"
          NAME@11..15 "site"
        COLON@15..16 ":"
        WHITESPACE@16..17 " "
        TYPE@17..23
          OPEN_SQUARE@17..18 "["
          TYPE@18..21
            NAMED_TYPE@18..21
              NAME@18..21 "Int"
          CLOSE_SQUARE@21..22 "]"
          WHITESPACE@22..23 " "
        DEFAULT_VALUE@23..35
          EQUALS@23..24 "="
          WHITESPACE@24..25 " "
          LIST_VALUE@25..35
            OPEN_SQUARE@25..26 "["
            INTEGER_VALUE@26..29
              NUMBER@26..29 "123"
            COMMA@29..30 ","
            WHITESPACE@30..31 " "
            INTEGER_VALUE@31..34
              NUMBER@31..34 "456"
            CLOSE_SQUARE@34..35 "]"
      CLOSE_PAREN@35..36 ")"
    WHITESPACE@36..37 " "
    SELECTION_SET@37..48
      OPEN_CURLY@37..38 "{"
      LINE_TERMINATOR@38..39 "\n"
      WHITESPACE@39..41 "  "
      FIELD_SELECTION@41..47
        NAME@41..46 "field"
        LINE_TERMINATOR@46..47 "\n"
      CLOSE_CURLY@47..48 "}"
  LINE_TERMINATOR@48..49 "\n"

