cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__query_var_default_object.graphql.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
ROOT@0..49
  OPERATION_DEF@0..48
    QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    NAME@6..9 "Foo"
    VARIABLE_DEFS@9..36
      OPEN_PAREN@9..10 "("
      VARIABLE_DEF@10..35
        VARIABLE@10..15
          DOLLAR@10..11 "$"
          NAME@11..15 "site"
        COLON@15..16 ":"
        WHITESPACE@16..17 " "
        TYPE@17..21
          NAMED_TYPE@17..21
            NAME@17..21 "Site"
        WHITESPACE@21..22 " "
        DEFAULT_VALUE@22..35
          EQUALS@22..23 "="
          VALUE@23..35
            WHITESPACE@23..24 " "
            OBJECT_VALUE@24..35
              OPEN_CURLY@24..25 "{"
              OBJECT_FIELD@25..34
                NAME@25..28 "url"
                COLON@28..29 ":"
                VALUE@29..34
                  WHITESPACE@29..30 " "
                  NULL@30..34 "null"
              CLOSE_CURLY@34..35 "}"
      CLOSE_PAREN@35..36 ")"
    WHITESPACE@36..37 " "
    SELECTION_SET@37..48
      OPEN_CURLY@37..38 "{"
      LINE_TERMINATOR@38..39 "\n"
      WHITESPACE@39..41 "  "
      SELECTION@41..47
        FIELD_SELECTION@41..47
          NAME@41..46 "field"
          LINE_TERMINATOR@46..47 "\n"
      CLOSE_CURLY@47..48 "}"
  LINE_TERMINATOR@48..49 "\n"

