cynic-parser/src/parser/snapshots/cynic_parser__parser__tests__string_literal.graphql.snap
---
source: cynic-parser/src/parser/mod.rs
expression: result.syntax()

---
DOCUMENT@0..30
  OPERATION_DEF@0..29
    OPERATION_TYPE@0..5
      QUERY_KEYWORD@0..5 "query"
    WHITESPACE@5..6 " "
    SELECTION_SET@6..29
      OPEN_CURLY@6..7 "{"
      LINE_TERMINATOR@7..8 "\n"
      WHITESPACE@8..10 "  "
      FIELD_SELECTION@10..28
        NAME@10..14 "node"
        ARGUMENTS@14..28
          OPEN_PAREN@14..15 "("
          ARGUMENT@15..26
            NAME@15..17 "id"
            COLON@17..18 ":"
            VALUE@18..26
              WHITESPACE@18..19 " "
              STRING_VALUE@19..26
                QUOTE@19..20 "\""
                STRING_CONTENTS@20..25 "hello"
                QUOTE@25..26 "\""
          CLOSE_PAREN@26..27 ")"
          LINE_TERMINATOR@27..28 "\n"
      CLOSE_CURLY@28..29 "}"
  LINE_TERMINATOR@29..30 "\n"

